Propagate context in jwt strategies (#308)
Closes #307

Signed-off-by: Prateek Malhotra <someone1@gmail.com>

dep: add forked version of fosite for integration test

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -58,6 +58,11 @@
   version = "1.0.0"
 
 [[constraint]]
+  name = "github.com/ory/fosite"
+  source = "github.com/104corp/fosite"
+  branch = "master"
+
+[[constraint]]
   name = "github.com/parnurzeal/gorequest"
   version = "0.2.15"
 
